k8s-manifests/keycloak/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-postgresql
  namespace: keycloak
spec:
  selector:
    app: keycloak-postgres
  ports:
  - port: 5432
    targetPort: 5432
