k8s-manifests/keycloak/keycloak-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/keycloak`)
      kind: Rule
      services:
        - name: keycloak-service
          port: 8080
